--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0+1
 homepage: https://github.com/Max1881/storage_path
 
 environment:
-  sdk: ">=2.17.0-69.2.beta <3.0.0"
+  sdk: '>=2.15.1 <3.0.0'
 
 dependencies:
   flutter:
