--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.Max.storagepath">
+  package="com.follow2vivek.storagepath">
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 </manifest>
